# curso-flaskadmin

./: README.md  admin.py  app.py  config.py  models.py  pyproject.toml
